--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%,rgba(131, 203, 236, 0.8) 100%), url(https://img.freepik.com/free-vector/abstract-blue-wavy-with-blurred-light-curved-lines-background_1409-1240.jpg?w=2000);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size:cover;">>
+  background-size:cover;">
   {% block content %} {% endblock %}
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
